# qjs-chipmunk2d

./: meson.build  qjs_chipmunk.c  qjs_chipmunk2d.c
subprojects/: chipmunk.wrap
